// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OperationButton /> renders 1`] = `
<Button
  action={[Function]}
  className={
    Object {
      "data-css-a5zy9": "",
    }
  }
  text="+"
/>
`;

exports[`<OperationButton /> renders with className 1`] = `
<Button
  action={[Function]}
  className={
    Object {
      "data-css-13btn4m": "",
    }
  }
  text="+"
/>
`;
